Fixed mobile horizontal scroll

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -40,8 +40,8 @@
   @media screen and (max-width: $on-palm) {
     padding-top: 30px;
     padding-bottom: 30px;
-    margin-left: -50px;
-    margin-right: -50px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .title{
@@ -103,8 +103,8 @@
   @media screen and (max-width: $on-palm) {
     padding-top: 30px;
     padding-bottom: 30px;
-    margin-left: -50px;
-    margin-right: -50px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .title{
